--- a/.github/workflows/jd-actions.yml
+++ b/.github/workflows/jd-actions.yml
@@ -3,6 +3,7 @@ name: Run Python script
 on:
   schedule:
     - cron:  '0 10 * * *'  # 这行表示每天的 UTC 时间10点执行
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest  # 运行环境
