python and checkout

--- a/.github/workflows/jd-actions.yml
+++ b/.github/workflows/jd-actions.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest  # 运行环境
 
     steps:
-    - uses: actions/checkout@v2  # 拉取代码
+    - uses: actions/checkout@v4  # 拉取代码
 
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.8  # 设置 Python 版本
+        python-version: '3.10'
         cache: 'pip'
     
     - name: selenium
